# uk-broadband-compare

./: .gitignore  README.md  app.py  offers.csv  packages.txt  pyproject.toml  requirements.txt
data/: EXL-Orange_PriceCompare_Theme_Tokens.csv
scrapers/: scrapers.py
ui/: ui.py
utils/: cache.py  robots.py  theme.py
