[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "uk-broadband-compare"
version = "0.1.0"
description = "Switch Smarter: UK Broadband Price & Speed Tool"
requires-python = ">=3.11,<3.12"
dependencies = [
  "streamlit==1.38.0",
  "playwright==1.46.0",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "beautifulsoup4==4.12.3",
  "lxml==5.2.2",
  "html5lib==1.1",
  "altair==5.3.0",
  "tenacity==8.2.3",
  "httpx==0.27.2",

]

# Tell hatch which top-level dirs are code packages
[tool.hatch.build.targets.wheel]
packages = ["scrapers", "utils", "ui"]

[tool.hatch.build.targets.sdist]
include = [
  "scrapers/**",
  "utils/**",
  "ui/**",
  "app.py",
  "data/**",
  "README.md",
]
